--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                                 <th>minutes away</th>
                             </tr>
                         </thead>
-                       <!-- table information dynamically dumped here -->
-                        <tbody>   
+                       <!-- table information -->
+                        <tbody id="trainInfo">   
+                    <!-- table information dynamically dumped here -->
                         </tbody>
                     </table>
                 </div>
@@ -49,6 +50,7 @@
                 <div>
                     <div class="well well-sm train-form">
                         <form class="form-horizontal">
+                            <fieldset>
                                 <legend>submit a train</legend>
                                 <div class="form-group">
                                     <label for="inputTrainName" class="col-lg-2 control-label">train name</label>
@@ -63,21 +65,21 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="inputFrequency" class="col-lg-2 control-label">first arrival in military time (HH:mm)</label>
+                                    <label for="inputFirstArrival" class="col-lg-2 control-label">first arrival in military time (HH:mm)</label>
                                     <div class="col-lg-10">
-                                        <input type="text" class="form-control" id="inputFrequency" placeholder="ex. 00:00">
+                                        <input type="text" class="form-control" id="inputFirstArrival" placeholder="ex. 00:00">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="inputArrival" class="col-lg-2 control-label">frequency in minutes</label>
+                                    <label for="inputFrequency" class="col-lg-2 control-label">frequency in minutes</label>
                                     <div class="col-lg-10">
-                                        <input type="number" class="form-control" id="inputArrival" placeholder="ex. 1440">
+                                        <input type="number" class="form-control" id="inputFrequency" placeholder="ex. 1440">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-lg-10 col-lg-offset-2">
-                                        <button type="reset" class="btn btn-default">Cancel</button>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                        <button type="reset" id="reset" class="btn btn-default">Cancel</button>
+                                        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
                                     </div>
                                 </div>
                             </fieldset>
