minor timestamp fix

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     <!-- Footer -->
     <footer class="footer">
         <p class="text-center">
-            &copy; Copyright 2017 Megan Jacobs
+           <!-- &copy; Copyright 2017 Megan Jacobs -->
+           2017 Megan Jacobs
         </p>
     </footer>
     <!-- Script -->
