created child to place train values into

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div>
                 <div class="header jumbotron">
                     <h1>train schedule</h1>
-                    <h6 class="subtitle lead">find one to take with this minute-based schedule</h6>
+                    <h6 class="subtitle lead">here is a catchy subtitle about trains</h6>
                 </div>
             </div>
             <!-- content -->
