--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-lg-10 col-lg-offset-2">
-                                        <button type="reset" id="reset" class="btn btn-default" data-toggle="modal" data-target="#myModal">Cancel</button>
-                                        <button type="submit" id="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Submit</button>
+                                        <button type="reset" id="reset" class="btn btn-default">Cancel</button>
+                                        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
                                     </div>
                                 </div>
                             </fieldset>
@@ -92,10 +92,10 @@
             <!-- closing wrap and container -->
         </div>
     </div>
-    <!-- Modal -->
+    <!-- Modal 
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
-            <!-- Modal content-->
+            Modal content
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer -->
     <footer class="footer">
         <p class="text-center">
